[update] 增加DF样例任务，解决参数传递问题和不适配JDK21的问题。